k8s/base/web-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: web
  namespace: demo
  labels:
    app: web
spec:
  type: ClusterIP
  selector:
    app: web
  ports:
    - port: 80
      targetPort: 8080
      protocol: TCP
